# Data-Quality-Dashboard-Claude

./: .gitignore  CLAUDE.md  Data Quality Dashboard.lvdash.json  ddl_and_load.sql
dashboard/: Data Quality Dashboard.lvdash.json  build_dashboard.py  dq_dashboard.json
data/: ddl_and_load_notebook.sql  dq_dashboard_spec.docx
dq-lineage-viewer/: app.py  app.yaml  pyproject.toml  requirements.txt
dq-lineage-viewer/frontend/: index.html  package-lock.json  package.json
dq-lineage-viewer/server/: config.py  sql_client.py
dq-rule-advisor/: app.py  app.yaml  pyproject.toml
dq-rule-advisor/frontend/: index.html  package-lock.json  package.json
dq-rule-advisor/frontend/src/: App.tsx  store.ts  types.ts
dq-rule-advisor/frontend/src/components/: RequirementsInput.tsx  RuleReview.tsx  SignOff.tsx  TableSelector.tsx
dq-rule-advisor/server/: config.py  llm.py  sql_client.py
dq-rule-advisor/server/routes/: catalog.py  rules.py
dq-rule-extraction/: 03_great_expectations_lab_results.py  04_dbt_pharmacy_schema.yml  extract_dq_rules_notebook.sql
dq_rule_extraction_from_code/: 01_dlt_patient_pipeline.py  02_sql_claims_validation.sql  05_spark_encounter_validation.py
rcm-pipeline/: rcm_pipeline_setup.sql
rcm-pipeline/RCM - Report Conflict Demo artifacts/: 01_radiology_revenue_cycle_ddl.ipynb  02_generate_synthetic_data.ipynb  03_report_views.ipynb  04_onboard_rcm_to_dq_monitoring.ipynb  README.md  Radiology Revenue Cycle - Data Model Design Document.md  Two Reports, One Truth — Pinnacle Radiology Partners.lvdash.json  export_dashboard.py
(+4 files in other folders)
